# multiplay-grpc-server

./: .gitignore  Cargo.toml  DATA_STRUCTURE.md  README.md  build.rs  generate_unity_client.sh
migrations/2019-01-27-055253_create_users/: up.sql
migrations/2019-01-28-114405_create_rooms/: down.sql  up.sql
migrations/2019-01-28-114717_create_members/: down.sql  up.sql
protos/: multiplay.proto  user.proto
src/: lib.rs  main.rs  models.rs  schema.rs
src/protos/: .gitignore  mod.rs
unity-client/: Multiplay.cs  MultiplayGrpc.cs
