[package]
name = "multiplay-grpc-server"
version = "0.1.0"
authors = ["安藤春香 <haruan2394@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = "2.0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[build-dependencies]
protoc-grpcio = "0.3.1"
