[package]
name = "multiplay-grpc-server"
version = "0.1.0"
authors = ["安藤春香 <haruan2394@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
futures = "0.1.16"
grpcio = "0.4.3"
protobuf = "2.0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.9.0"
mongodb = "0.3.11"

[build-dependencies]
protoc-grpcio = "0.3.1"
